2008-06-20  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc.el (vc-dir-hide-up-to-date): Undo previous change.

2008-06-20  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/checkdoc.el (checkdoc-start-section, checkdoc-error):
	Bind inhibit-read-only since the buffer is always read-only.

2008-06-20  Ulf Jasper  <ulf@web.de>

	* net/newst-treeview.el (newsticker-treeview-own-frame): Changed
	default value to nil.
	(newsticker--treeview-list-add-item)
	(newsticker--treeview-propertize-tag): Show item title in tooltip.

2008-06-20  Stefan Monnier  <monnier@iro.umontreal.ca>

	* textmodes/rst.el: New file.

2008-06-20  Sam Steingold  <sds@gnu.org>

	* vc.el (vc-dir-hide-up-to-date): Accept a prefix argument to also
	remove DIRECTORY entries.

2008-06-20  Eli Zaretskii  <eliz@gnu.org>

	* makefile.w32-in (distclean): Depend on `clean'.
	(clean): Delete calc/calc-loaddefs.el~ and eshell/esh-groups.el~.
	(AUTOGENEL): Add $(lisp)/nxml/subdirs.el.
	($(lisp)/cus-load.el): Don't use `touch'.  Instead, generate an
	empty cus-load.el with `echo', and include "Local Variables"
	section to prevent the empty file from being compiled.
	(cus-load.el-SH, cus-load.el-CMD): New SHELLTYPE-specific targets
	that generate an empty cus-load.el.

2008-06-20  Juanma Barranquero  <lekktu@gmail.com>

	* makefile.w32-in (bootstrap-clean-CMD, bootstrap-clean-SH):
	Don't copy ldefs-boot.el over loaddefs.el.
	(bootstrap-clean): Remove loaddefs.el and don't depend on it.
	(loaddefs.el-SH, loaddefs.el-CMD): Don't add autoloads and defvars
	to loaddefs.el; they are not needed now.  Add coding cookie.

2008-06-20  Miles Bader  <miles@gnu.org>

	* face-remap.el (face-remap-add-relative, face-remap-set-base):
	Strip unnecessary list levels from SPECS.
	(buffer-face-set, buffer-face-toggle):
	Change argument from FACE to &rest SPECS, and strip unnecessary
	list levels from SPECS.
	(buffer-face-mode-invoke): Change argument from FACE to SPECS.

2008-06-20  Jason Rumney  <jasonr@gnu.org>
